# offline-store-agent

./: .gitignore  README.md  SKILL.md  nanda_app.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
examples/: agent_demo.py  offline_reconcile_demo.py
offline_store_agent/: __init__.py  agent.py  crdt.py  llm.py  server.py  service.py  store.py
tests/: test_agent.py  test_crdt.py  test_llm.py  test_service.py  test_store.py
